--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           list: [
             { name: "hongyu111", id: 1 },
             { name: "Dzldragon", id: 2 },
-            { name: "", id: 3 },
+            { name: "Danay-J", id: 3 },
           ],
         },
       });
