--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>{{item.name}}</li>
       </ul>
     </div>
-    <script src="../vue.js"></script>
+    <script src="./vue.js"></script>
     <script>
       const app = new Vue({
         el: "#app",
